// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toBeNegative fails when given negative number 1`] = `
"expect(received).not.toBeNegative()

Expected value to not be a negative number received:
  -1"
`;

exports[`.toBeNegative fails when given Infinity 1`] = `
"expect(received).toBeNegative()

Expected value to be a negative number received:
  Infinity"
`;

exports[`.toBeNegative fails when given positive number 1`] = `
"expect(received).toBeNegative()

Expected value to be a negative number received:
  1"
`;
